# docs/swagger.yaml
@@ -16,6 +16,15 @@ definitions:
         description: Month in YYYY-MM format
         type: string
     type: object
+  domain.MonthlyTotalSeries:
+    properties:
+      month:
+        description: Month in YYYY-MM format
+        type: string
+      total:
+        description: Total amount
+        type: integer
+    type: object
   v1.CategoryResponse:
     properties:
       id:
@@ -427,6 +436,43 @@ paths:
           schema:
             $ref: '#/definitions/domain.ErrorResponse'
       summary: Get monthly series of outcomes
+      tags:
+      - outcomes
+  /api/v1/outcomes/series-total:
+    get:
+      consumes:
+      - application/json
+      description: Get the total sum of outcomes for each month between dates (defaults
+        to last 12 months if not provided)
+      parameters:
+      - description: Start date filter (ISO 8601 format, defaults to 12 months ago)
+        in: query
+        name: from
+        type: string
+      - description: End date filter (ISO 8601 format, defaults to now)
+        in: query
+        name: to
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/domain.MonthlyTotalSeries'
+              type: array
+            type: array
+        "400":
+          description: Bad request error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      summary: Get monthly series of outcomes' total amount
       tags:
       - outcomes
   /api/v1/outcomes/sums-by-category:
