# internal/router/v1.go
@@ -19,6 +19,7 @@ func RegisterV1Routes(mux *http.ServeMux, h *handler.Handlers) {
 	mux.HandleFunc("GET /api/v1/outcomes/sums-by-category", h.V1.Outcomes.GetOutcomesSum)
 	mux.HandleFunc("GET /api/v1/outcomes/total", h.V1.Outcomes.GetOutcomesTotal)
 	mux.HandleFunc("GET /api/v1/outcomes/series-by-category", h.V1.Outcomes.GetOutcomesSeries)
+	mux.HandleFunc("GET /api/v1/outcomes/series-total", h.V1.Outcomes.GetOutcomesTotalSeries)
 	mux.HandleFunc("GET /api/v1/outcomes/{id}", h.V1.Outcomes.GetOutcomeById)
 	mux.HandleFunc("PATCH /api/v1/outcomes/{id}", h.V1.Outcomes.PatchOutcome)
 	mux.HandleFunc("DELETE /api/v1/outcomes/{id}", h.V1.Outcomes.DeleteOutcomeById)
